<resources>
    <string name="app_name">Simple Games</string>
    <string name="info">Please, use the menu to access the games,
        eventually there will be something here</string>
    <string name="tictac">Tic Tac Toe</string>
    <string name="AInope">AI off</string>
    <string name="AIeasy">AI on</string>
    <string name="AIhard">AI wins</string>
    <string name="title_home">Home</string>
    <string name="title_tictac">Tic Tac Toe Game</string>
    <string name="title_p1">Player 1: \u00A0</string>
    <string name="title_p2">Player 2: \u00A0</string>
    <!--  \u00A0 means a single normal space  -->
    <string name="title_memo">Memory Game</string>
    <string name="title_memoScore">Memory Game Scores</string>
    <string name="title_hang">Hangman Game</string>
    <string name="title_hangScore">Hangman Game Scores</string>
    <string name="hang_letter">x</string>
    <string name="hang_single">Single Player</string>
    <string name="hang_multi">"Multi" Player</string>
    <string name="scores">Scores</string>
    <string name="player">Players</string>
    <string name="hang_alphabet">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="char4letters1">
        able, acid, aged, also, area, army, away, baby, back, ball, band, bank, base,
        bath, bear, beat, been, beer, bell, belt, best, bill, bird, blow, blue, boat,
        body, bomb, bond, bone, book, boom, born, boss, both, bowl, bulk, burn, bush,
        busy, call, calm, came, camp, card, care, case, cash, cast, cell, chat,
        chip, city, club, coal, coat, code, cold, come, cook, cool, cope, copy, cost,
        crew, crop, dark, data, date, dawn, days, dead, deal, dean, dear, debt, deep
        deny, desk, dial, dick, diet, disc, disk, does, done, door, dose, down, draw,
        drew, drop, drug, dual, duke, dust, duty
    </string>
    <string name="char4letters2">
        each, earn, ease, east, easy, edge, else, even, ever, evil, exit, face, fact,
        fail, fair, fall, farm, fast, fate, fear, feed, feel, feet, fell, felt, file,
        fill, film, find, fine, fire, firm, fish, five, flat, flow, food, foot, ford,
        form, fort, four, free, from, fuel, full, fund, gain, game, gate, gave, gear,
        gene, gift, girl, give, glad, goal, goes, gold, Golf, gone, good, gray, grew,
        grey, grow, gulf, hair, half, hall, hand, hang, hard, harm, hate, have, head,
        hear, heat, held, hell, help, here, hero, high, hill, hire, hold, hole, holy,
        home, hope, host, hour, huge, hung, hunt, hurt
    </string>
    <string name="char4letters3">
        idea, inch, into, iron, item, join, jump, jury, just, keen, keep, kept, kick,
        kill, kind, king, knee, knew, know, lack, lady, laid, lake, land, lane, last,
        late, lead, left, less, life, lift, like, line, link, list, live, load, loan,
        lock, logo, long, look, lord, lose, loss, lost, love, luck, made, mail, main,
        make, male, many, mark, mass, meal, mean, meat, meet, menu, mere, mile, milk,
        mill, mind, mine, miss, mode, mood, moon, more, most, move, much, must, name,
        navy, near, neck, need, news, next, nice, nine, none, nose, note, nope, okay,
        once, only, onto, open, oral, over
    </string>
    <string name="char4letters4">
        pace, pack, page, paid, pain, pair, palm, park, part, pass, past, path, peak,
        pick, pink, pipe, plan, play, plot, plug, plus, poll, pool, poor, port, post,
        pull, pure, push, race, rail, rain, rank, rare, rate, read, real, rear, rely,
        rent, rest, rice, rich, ride, ring, rise, risk, road, rock, role, roll, roof,
        room, root, rose, rule, rush, ruth, safe, said, sake, sale, salt, same, sand,
        save, seat, seed, seek, seem, seen, self, sell, send, sent, sept, ship, shop,
        shot, show, shut, sick, side, sign, site, size, skin, slip, slow, snow, soft,
        soil, sold, sole, some, song, soon, sort, soul, spot, star, stay, step, stop,
        such, suit, sure
    </string>
    <string name="char4letters5">
        take, tale, talk, tall, tank, tape, task, team, tech, tell, tend, term, test,
        text, than, that, them, then, they, thin, this, thus, till, time, tiny, told,
        toll, tone, took, tool, tour, town, tree, trip, true, tune, turn, twin, type,
        unit, upon, used, user, vary, vast, very, vice, view, vote, wage, wait, wake,
        walk, wall, want, ward, warm, wash, wave, ways, weak, wear, week, well, went,
        were, west, what, when, whom, wide, wife, wild, will, wind, wine, wing, wire,
        wise, wish, with, wood, word, wore, work, yard, yeah, year, your, zero, zone
    </string>
    <string name="game_image">game image</string>
    <string name="game_over">GAME OVER</string>
    <string name="medium_game">Medium</string>
    <string name="hard_game">Hard</string>
    <string name="easy_game">Easy</string>

    <string name="memo_time">Timer:\t</string>
    <string name="memo_seconds">\t seconds</string>
    <string name="memo_timer">Timer: 0 seconds</string>
    <string name="save">Save</string>

</resources>
